# dta

./: .dockerignore  .ecrc  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  DTA_logo.py  Dockerfile  KIS с надписью.ai  KISPY.py  LICENSE  Makefile  README.md  docker-compose.yaml  logo.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  Доп_файлы.rar  лого с надписью.ai
.github/workflows/: workflow.yml
app/: alembic.ini  app.py  config.defaults.json  forms.py  managers.py  models.py  utils.py  views.py  worker.py
app/alembic/: env.py
app/alembic/versions/: 20211230.19:54.create_users.py  20211231.21:38.create_tasks.py  20220214.22:58.create_agent.py
app/templates/: dashboard.jinja  error.jinja  group.jinja  index.jinja  layout.jinja  login.jinja  register.jinja  success.jinja  task.jinja  user-layout.jinja
app/templates/anon/: login.jinja  register.jinja
app/templates/user/: task.jinja  tasks.jinja
mocks/: analyze_solution.py  check_solution.py  loaded_tests.py  specification.json
requirements/: requirements.in  requirements.lint.in  requirements.lint.txt  requirements.test.in  requirements.test.txt  requirements.txt
tests/: alembic.ini  config.defaults.json  conftest.py  pytest.ini  test_login.py  test_registration.py  test_teacher.py  utils.py  web-app-exam.db
tests/api/: test_groups.py  test_seeds.py  test_submission.py  test_tasks.py  test_variants.py  test_worker.py
tests/database/: test_check.py  test_groups.py  test_message.py  test_seeds.py  test_task.py  test_task_status.py  test_variant.py
tests/examples/: test_basic.py
tests/managers/: test_export.py
tests/ui/: test_auth.py  test_groups.py  test_rating.py  test_submissions.py  test_task_status.py  test_tasks.py  test_teacher.py  test_teacher_exam.py  test_variants.py
vlastSovetam/: main.py
webapp/: alembic.ini  api.py  app.py  commands.py  config.defaults.json  dto.py  enums.py  forms.py  lks.py  mailbox.py  managers.py  models.py  repositories.py  utils.py  views.py  worker.py  Итоги зачёта ИНБО-07-20.csv
webapp/alembic/: env.py
webapp/alembic/versions/: 20220214.22-58.create_agent.py  20220214.22-58.create_webapp.py  20220214.22:58.create_webapp.py  20220312.16-37.fix_task_statuses.py  20220312.16:37.fix_task_statuses.py  20220410.02-32.add_final_seeds.py  20220602.13-33.add_ip_to_statuses.py  20220617.00-24.create_checks.py  20220811.13-56.create_teachers.py  20220830.14-28.add_task_formulations.py  20221023.15-22.create_students.py  20221023.15-23.create_mailers.py  20221106.21-53.add_student_to_messages.py  20221106.21-55.add_blocked_to_students.py  20221209.20-37.add_achievements.py  20230212.22-58.create_external_provider_user_scheme.py  20230618.12-17.add_achievement_to_checks.py  20230703.22-00.add_external_name.py  20240229.01-04.add_session_id.py  20240514.22-12.students_as_teachers.py  20240605.00-27.create_allowed_ips.py  20250124.13-40.add_group_id.py  20250329.22-25.add_variant_id.py  20250602.15-41.create_type_of_task.py
webapp/database/: __init__.py
webapp/database/sqlalchemy/: __init__.py  context.py  core.py  engine.py  proxy.py  type_decorators.py
webapp/database/sqlalchemy/mixins/: __init__.py  models.py  repositories.py
webapp/models/: __init__.py  allowed_ip.py  final_seed.py  group.py  mailer.py  message.py  message_check.py  student.py  task.py  task_status.py  variant.py
webapp/repositories/: __init__.py  allowed_ip.py  final_seed.py  group.py  mailer.py  message.py  message_check.py  student.py  task.py  task_status.py  variant.py
webapp/static/js/: autoreload.js
webapp/templates/: dashboard.jinja  error.jinja  exam.jinja  exam_management.jinja  exams.jinja  examstatus.jinja  group.jinja  layout.jinja  success.jinja  task.jinja
webapp/templates/student/: choice_of_variant.jinja  dashboard.jinja  group.jinja  groups_rating.jinja  home.jinja  login.jinja  password.jinja  rating.jinja  register.jinja  student_layout.jinja  submissions.jinja  success.jinja  task.jinja  task_status.jinja
webapp/templates/teacher/: dashboard.jinja  exam.jinja  group.jinja  groups.jinja  login.jinja  queue.jinja  student.jinja  submissions.jinja
webapp/views/: api.py  student.py  teacher.py
