[tool.poetry]
name = "app"
version = "0.1.0"
description = "DTA web app."
authors = ["Artyom <worldbeater-dev@yandex.ru> and Contributors"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
Flask = "2.0.2"
Jinja2 = "3.0.3"
SQLAlchemy = "1.4.29"
Flask-WTF = "1.0.0"
alembic = "1.7.5"
radon = "6.0.1"
waitress = "2.0.0"
pycodestyle = "2.8.0"
scikit-learn = "1.1.1"
Flask-JWT-Extended = "4.3.1"
bcrypt = "3.2.2"
authlib = "1.2.0"
requests = "2.28.2"

[tool.poetry.dev-dependencies]
beautifulsoup4 = "4.10.0"
isort = "5.9.3"
pytest = "7.0.1"
pytest-cov = "3.0.0"
pytest-alembic = "0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = "119"
multi_line_output = "3"
lines_after_imports = "2"
include_trailing_comma = "false"
use_parentheses = "true"
skip = [
    ".git",
    "webapp/alembic/versions"
]
skip_glob = [
    ".venv",
    "venv*"
]
default_section = "THIRDPARTY"
src_paths = "webapp"
known_flask = "flask"
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FLASK",
    "FIRSTPARTY",
    "LOCALFOLDER"
]

[tool.pytest.ini_options]
addopts = "--cov=webapp --cov-report xml"
testpaths = [
    "tests"
]
filterwarnings = [
    "default",
    "error"
]
log_cli="true"
log_level="NOTSET"
